Intermittent xpcshell <test-name> | application crashed [@ mozilla::dom::ContentParent::LaunchSubprocessReject()]
Categories
(Core :: IPC, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox94 | --- | unaffected |
| firefox95 | --- | unaffected |
| firefox96 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jesup)
References
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file)
Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=354965394&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Z2ZSVfUKTo607XeuSdqt9g/runs/0/artifacts/public/logs/live_backing.log
[task 2021-10-15T22:38:06.044Z] 22:38:06 INFO - TEST-START | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_proxy_socks.js
[task 2021-10-15T22:38:08.063Z] 22:38:08 WARNING - TEST-UNEXPECTED-FAIL | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_proxy_socks.js | xpcshell return code: 1
[task 2021-10-15T22:38:08.063Z] 22:38:08 INFO - TEST-INFO took 2018ms
[task 2021-10-15T22:38:08.063Z] 22:38:08 INFO - >>>>>>>
[task 2021-10-15T22:38:08.063Z] 22:38:08 INFO - PID 4094 | [Parent 4094, Main Thread] WARNING: Couldn't get the user appdata directory. Crash events may not be produced.: file /builds/worker/checkouts/gecko/toolkit/crashreporter/nsExceptionHandler.cpp:2964
[task 2021-10-15T22:38:08.064Z] 22:38:08 INFO - (xpcshell/head.js) | test MAIN run_test pending (1)
[task 2021-10-15T22:38:08.064Z] 22:38:08 INFO - (xpcshell/head.js) | test run_next_test 0 pending (2)
[task 2021-10-15T22:38:08.064Z] 22:38:08 INFO - (xpcshell/head.js) | test MAIN run_test finished (2)
[task 2021-10-15T22:38:08.064Z] 22:38:08 INFO - running event loop
[task 2021-10-15T22:38:08.065Z] 22:38:08 INFO - PID 4094 | [Parent 4094, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, kKnownEsrVersion) failed with result 0x80004002 (NS_NOINTERFACE): file /builds/worker/checkouts/gecko/toolkit/components/resistfingerprinting/nsRFPService.cpp:560
[task 2021-10-15T22:38:08.065Z] 22:38:08 INFO - xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_proxy_socks.js | Starting check_remote
[task 2021-10-15T22:38:08.065Z] 22:38:08 INFO - (xpcshell/head.js) | test check_remote pending (2)
[task 2021-10-15T22:38:08.065Z] 22:38:08 INFO - TEST-PASS | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_proxy_socks.js | check_remote - [check_remote : 1] useRemoteWebExtensions matches - true == true
Updated•4 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Updated•4 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 10•4 years ago
|
||
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Comment 12•4 years ago
|
||
(In reply to Pulsebot from comment #11)
Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/autoland/rev/e5db23c3a4ec
Downgrade NS_ERROR to NS_WARNING when failing to launch a process r=nika
It might be unrelated, but in the light of the frequent failures we see in bug 1741152: Are we sure that the assumption from bug 1737174 comment 5 still holds?
Comment 13•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 14•4 years ago
|
||
We're seeing some issues with crashing in process startup on linux, apparently due to fd exhaustion in the main process currently (related to egl on linux). The assumption is still true, but we may be failing to start for unexpected reasons. I've downgraded this to a warning.
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Description
•