Bug 1736120: Downgrade NS_ERROR to NS_WARNING when failing to launch a process r=nika

Differential Revision: https://phabricator.services.mozilla.com/D129899